fixed spacing

--- a/template/css/PITCHME.css
+++ b/template/css/PITCHME.css
@@ -79,7 +79,7 @@
 
 .images {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 
